<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warnabackgroud"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="35dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputnamadepan"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/namadpn"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputnamabelakang"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/namablkng"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TableRow
                    android:layout_width="375dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputtempatlahir"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/tempatlhr"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputtanggallahir"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:ems="10"
                            android:hint="@string/tanggallhr"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorPrimaryDark"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>
            </TableLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editalamat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/almt"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>




            <TextView
                android:id="@+id/jensklmn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jnisklmn"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/laki" />

                    <RadioButton
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/prmpn" />

                </RadioGroup>

            </TableLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agm"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/islm" />

                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/krstn" />
            </RadioGroup>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ktlk" />

                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/hnd" />
            </RadioGroup>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/budha" />

                <RadioButton
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/knghc" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alrn"/>
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittelepon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/tlpn"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/eml"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/pswrd"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enteragainpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/pswrd"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryDark"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </TableRow>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15.0dip"
                android:layout_marginBottom="30.0dip">
                <Button
                    android:textStyle="bold"
                    android:id="@+id/btnk"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="0.0dip"
                    android:layout_height="30.0pt"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/kmbl"
                    android:layout_weight="0.5" />
                <Button
                    android:textStyle="bold"
                    android:id="@+id/btns"
                    android:background="@color/colorPrimaryDark"
                    android:layout_width="0.0dip"
                    android:layout_height="30.0pt"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/dftr"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>